--- a/MyBatis_MBG/pom.xml
+++ b/MyBatis_MBG/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>MyBatis</artifactId>
+    <artifactId>MyBatis_MBG</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -54,28 +54,6 @@
             <artifactId>mybatis-generator-core</artifactId>
             <version>1.3.6</version>
         </dependency>
-
-        <!-- mybatis-ehcache  第三方缓存jar包-->
-        <dependency>
-            <groupId>org.mybatis.caches</groupId>
-            <artifactId>mybatis-ehcache</artifactId>
-            <version>1.0.3</version>
-        </dependency>
-
-        <!-- slf4j-log4j12  日志文件jar包-->
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-            <version>1.6.2</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.github.pagehelper</groupId>
-            <artifactId>pagehelper</artifactId>
-            <version>5.3.2</version>
-        </dependency>
-
     </dependencies>
 
 </project>
